@@ -14,12 +14,12 @@ game server) sometimes need to load large Storable objects without
 blocking the server for a long time.
 
 This is being implemented by using a perlio layer that feeds only small
-amounts of data (1024 bytes per call) into Storable, and C<Coro::cede>'ing
-regularly (at most 50 times per second by default, though).
+amounts of data (4096 bytes per call) into Storable, and C<Coro::cede>'ing
+regularly (at most 100 times per second by default, though).
 
-As it seems that Storable is not reentrant, this module also wraps most
-functions of the Storable module so that only one freeze or thaw is done
-at any one moment (recursive invocations are not currently supported).
+As Storable is not reentrant, this module also wraps most functions of the
+Storable module so that only one freeze or thaw is done at any one moment
+(and recursive invocations are not currently supported).
 
 =head1 FUNCTIONS
 
@@ -31,16 +31,14 @@ Retrieve an object from the given $pst, which must have been created with
 C<Coro::Storable::freeze> or C<Storable::store_fd>/C<Storable::store>
 (sorry, but Storable uses incompatible formats for disk/mem objects).
 
-This works by calling C<Coro::cede> for every 4096 bytes read in.
+This function will cede regularly.
 
 =item $pst = freeze $ref
 
 Freeze the given scalar into a Storable object. It uses the same format as
 C<Storable::store_fd>.
 
-This works by calling C<Coro::cede> for every write that Storable
-issues. Unfortunately, Storable often makes many very small writes, so it
-is rather inefficient. But it does keep the latency low.
+This functino will cede regularly.
 
 =item $pst = nfreeze $ref
 
@@ -53,7 +51,7 @@ Same as C<freeze> but is guaranteed to block. This is useful e.g. in
 C<Coro::Util::fork_eval> when you want to serialise a data structure
 for use with the C<thaw> function for this module. You cannot use
 C<Storable::freeze> for this as Storable uses incompatible formats for
-memory and file images.
+memory and file images, and this module uses file images.
 
 =item $pst = blocking_nfreeze $ref
 
@@ -63,7 +61,7 @@ Same as C<blocking_freeze> but uses C<nfreeze> internally.
 
 Acquire the Storable lock, for when you want to call Storable yourself.
 
-Note that this module already wraps the Storable functions, so there is
+Note that this module already wraps all Storable functions, so there is
 rarely the need to do this yourself.
 
 =back
@@ -90,7 +88,7 @@ use base "Exporter";
 our $VERSION = 4.748;
 our @EXPORT = qw(thaw freeze nfreeze blocking_thaw blocking_freeze blocking_nfreeze);
 
-our $GRANULARITY = 0.02;
+our $GRANULARITY = 0.01;
 
 my $lock = new Coro::Semaphore;
 
