@@ -9,7 +9,8 @@ TODO: maybe implement a default message channel, very much like Erlang's
 	- implement, but do not document, PerlIO::cede(granularity).
 	- Coro::Storable forgot to wrap Storable::pstore.
         - work around the multitude of leaks and memory corruption
-          bugs in PerlIO::via by using our own C-level perliol.
+          bugs in PerlIO::via by using our own C-level perliol. As a side
+          effect, Coro::Storable is now much, much, much faster.
 
 4.747 Tue Sep 23 01:59:41 CEST 2008
 	- fix a per-cv memleak (one empty array was leaked per
